fixed class visibility properties :mag: :eyes:

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,10 @@ footer p {
     transition-duration: 0.4s;
 }
 
+.leftArrow {
+    visibility: hidden;
+}
+
 .dialogue {
     background: black;
     width: 400px;
@@ -137,6 +141,7 @@ footer p {
     padding: 5px;
     margin: 20px 10px 0 10px;
     transition-duration: 0.4s;
+    visibility: hidden;
 }
 
 .ynbutton button:hover,
@@ -181,6 +186,7 @@ footer p {
 .applesNeeded {
     font-size: 4rem;
     border-bottom: solid 3px rgb(255, 74, 74);
+    visibility: hidden;
 }
 
 
